# lidar-with-velocity

./: CMakeLists.txt  LICENSES  README.md  package.xml
config/: config.yaml
include/common/: assignment.h  config.h  crispness_score.h  frame.h  main.h  time.h
include/tracker/: Hungarian.h  tracker.h
launch/: start.launch
libs/yaml/: libyaml-cpp.so.0.6  libyaml-cpp.so.0.6.0
rviz_cfg/: vis.rviz
src/: frame.cpp  main.cpp  main_ros.cpp  start.cpp  tracker.cpp
src/assignment/: Hungarian.cpp  assignment.cpp  config.cpp  frame.cpp  main.cpp  tracker.cpp
test_data/raw/: 0.pcd  1.pcd  2.pcd  3.pcd  4.pcd
test_data/undistorted/: 0.pcd  1.pcd  2.pcd  3.pcd  4.pcd
